--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,4 +38,4 @@ jobs:
           script: |
             cd htdocs/darshanparmar.simpleinc.in/
             rm -rf *
-            cp -r $GITHUB_WORKSPACE/build/* .
+            rsync -avz --delete $GITHUB_WORKSPACE/build/ .
