--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,13 +28,11 @@ jobs:
         run: |
           ls -la $GITHUB_WORKSPACE/build
 
-      - name: Deploy to VPS
-        uses: appleboy/ssh-action@master
+      - name: Copy folder content recursively to vps
+        uses: garygrossgarten/github-action-scp@release
         with:
+          local: build
+          remote: /htdocs/darshanparmar.simpleinc.in/
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
-          script: |
-            cd htdocs/darshanparmar.simpleinc.in/
-            rm -rf *
-            cp -r $GITHUB_WORKSPACE/build .
