--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
-name: Deploy to VPS
+name: Deploy
 
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -13,26 +13,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20'
-
       - name: Install dependencies
         run: npm install
 
-      - name: Build React app
+      - name: Build
         run: npm run build
 
-      - name: Debug
-        run: |
-          ls -la $GITHUB_WORKSPACE/build
-
-      - name: Copy folder content recursively to VPS
-        uses: garygrossgarten/github-action-scp@release
+      - name: Deploy to VPS
+        uses: appleboy/ssh-action@master
         with:
-          local: $GITHUB_WORKSPACE/build
-          remote: /home/simpleinc-darshanparmar/htdocs/darshanparmar.simpleinc.in/
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
+          script: |
+            cd /home/simpleinc-darshanparmar/htdocs/darshanparmar.simpleinc.in
+            rm -rf *
+            scp -r $GITHUB_WORKSPACE/build/* .
