--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,5 +28,6 @@ jobs:
           script: |
             cd /home/simpleinc-darshanparmar/htdocs/darshanparmar.simpleinc.in
             rm -rf *
+            pwd
             scp -r $GITHUB_WORKSPACE/build/* .
             #asdad
