--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,31 +1,35 @@
-name: Deploy to CloudPanel VPS
+name: Deploy React App
 
 on:
   push:
     branches:
-      - master
+      - master  # Change this to your main branch name if different
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20'  # Adjust Node.js version as needed
 
-    - name: Build React app
-      run: npm run build
+      - name: Install Dependencies
+        run: npm install
 
-    - name: Deploy to VPS
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SSH_HOST }}
-        username: ${{ secrets.SSH_USERNAME }}
-        password: ${{ secrets.SSH_PASSWORD }}
-        script: |
-          ssh ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} "rm -rf /home/simpleinc-darshanparmar/htdocs/darshanparmar.simpleinc.in/*"
-          rsync -r --delete-after --quiet $GITHUB_WORKSPACE/build/ /home/simpleinc-darshanparmar/htdocs/darshanparmar.simpleinc.in/
+      - name: Build React App
+        run: npm run build
+
+      - name: Deploy to VPS
+        uses: easingthemes/ssh-deploy@v2
+        with:
+          server_ip: ${{ secrets.SSH_HOST }}  # Add your VPS server's IP address or domain name as a secret
+          server_username: ${{ secrets.SSH_USERNAME }}  # Add your VPS server's username as a secret
+          server_ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}  # Add your VPS server's SSH private key as a secret
+          local_path: $GITHUB_WORKSPACE/build/  # Path to your React app's build directory
+          remote_path: /home/simpleinc-darshanparmar/htdocs/darshanparmar.simpleinc.in/  # Path on your VPS server where the app should be deployed
 
