--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,7 @@ jobs:
           server_username: ${{ secrets.SSH_USERNAME }}  # Add your VPS server's username as a secret
           server_ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}  # Add your VPS server's SSH private key as a secret
           local_path: $GITHUB_WORKSPACE/build/  # Path to your React app's build directory
-          remote_path: /home/simpleinc-darshanparmar/htdocs/darshanparmar.simpleinc.in/  # Path on your VPS server where the app should be deployed
-
+          remote_path: /htdocs/darshanparmar.simpleinc.in/  # Path on your VPS server where the app should be deployed
+          REMOTE_PORT: 22  # Port for SSH connection, adjust if needed
+          TARGET: /home/simpleinc-darshanparmar/  # Adjust the target directory on the remote server
+          ARGS: -rltgoDzvO
