--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,5 +26,6 @@ jobs:
 
       - name: Deploy to VPS
         run: |
-          ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} 'mkdir -p /home/simpleinc-darshanparmar/htdocs/darshanparmar.simpleinc.in'
-          scp -o StrictHostKeyChecking=no -r $GITHUB_WORKSPACE/build/* ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:/home/simpleinc-darshanparmar/htdocs/darshanparmar.simpleinc.in/
+          ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+          ssh -i ${{ secrets.SSH_PRIVATE_KEY }} ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} 'mkdir -p /htdocs/darshanparmar.simpleinc.in'
+          scp -r -i ${{ secrets.SSH_PRIVATE_KEY }} -o StrictHostKeyChecking=no $GITHUB_WORKSPACE/build/* ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:/htdocs/darshanparmar.simpleinc.in/
