--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Install npm dependencies
+        run: npm install
+
       - name: Build React App
         run: npm run build
 
@@ -29,5 +32,4 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: build/
           target: /home/simpleinc-darshanparmar/htdocs/darshanparmar.simpleinc.in/
-
 
