--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,15 @@ jobs:
       - name: Build React App
         run: npm run build
 
+      - name: Clean Remote Directory
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            rm -rf /home/simpleinc-darshanparmar/htdocs/darshanparmar.simpleinc.in/*
+
       - name: Deploy to VPS
         uses: appleboy/scp-action@master
         with:
@@ -32,4 +41,3 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: build/
           target: /home/simpleinc-darshanparmar/htdocs/darshanparmar.simpleinc.in/
-
