--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,5 +39,5 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: build/
+          source: build/*  # Upload the contents of the build folder only
           target: /home/simpleinc-darshanparmar/htdocs/darshanparmar.simpleinc.in/
