--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,21 +10,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
+      - name: Check out repository
         uses: actions/checkout@v2
 
-      - name: Setup Node.js
+      - name: Set up Node
         uses: actions/setup-node@v2
         with:
           node-version: '20'
 
-      - name: Install npm dependencies
+      - name: Install dependencies
         run: npm install
 
       - name: Build React App
         run: npm run build
 
-      - name: Clean Remote Directory
+      - name: Clean remote directory
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -39,5 +39,5 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: build/*  # Upload the contents of the build folder only
-          target: /home/simpleinc-darshanparmar/htdocs/darshanparmar.simpleinc.in/
+          source: "build/*"  # Upload only the contents of build/
+          target: "/home/simpleinc-darshanparmar/htdocs/darshanparmar.simpleinc.in/"
